--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,13 @@ dependencies = [
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
-    "keyboard>=0.13.5"
+    "keyboard>=0.13.5",
+    "pyaudio>=0.2.11",
+    "pydub>=0.25.1",
+    "langchain>=0.1.0",
+    "langchain-openai>=0.1.0",
+    "keyboard>=0.13.5",
+
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
