--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "langchain>=0.1.0",
     "langchain-openai>=0.1.0",
     "keyboard>=0.13.5",
-
+    "nuitka>=2.7.14",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
